--- a/HandyWriterz/vercel.json
+++ b/HandyWriterz/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "npx vite build",
+  "buildCommand": "npm install && npm run build",
+  "installCommand": "npm install",
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
