--- a/HandyWriterz/vercel.json
+++ b/HandyWriterz/vercel.json
@@ -1,6 +1,14 @@
 {
-  "buildCommand": "npm install && npm run build",
-  "installCommand": "npm install",
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node",
+      "config": {
+        "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh"
+      }
+    }
+  ],
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
