--- a/HandyWriterz/vercel.json
+++ b/HandyWriterz/vercel.json
@@ -1,16 +1,9 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node",
-      "config": {
-        "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh"
-      }
-    }
-  ],
-  "outputDirectory": "dist",
   "framework": "vite",
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "outputDirectory": "dist",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ],
