--- a/HandyWriterz/vercel.json
+++ b/HandyWriterz/vercel.json
@@ -1,12 +1,13 @@
 {
+  "version": 2,
+  "buildCommand": "cd HandyWriterz && npm install && npm run build",
+  "outputDirectory": "HandyWriterz/dist",
+  "installCommand": "cd HandyWriterz && npm install",
   "framework": "vite",
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "outputDirectory": "dist",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ],
+  "devCommand": "npm run dev",
   "headers": [
     {
       "source": "/(.*)",
